--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                         <div data-nmb="4">4</div>
                         <div data-nmb="5">5</div>
                         <div data-nmb="6">6</div>
-                        <div data-nmb="*">*
+                        <div data-nmb="*" data-symbole="x">x
                             <div class="ct y">nPr</div>
                         </div>
-                        <div data-nmb="/">/
+                        <div data-nmb="/" data-symbole="&#247">&#247
                             <div class="ct y">nCr</div>
                         </div>
                         <div class="one" data-nmb="1">1
@@ -157,10 +157,10 @@
                         </div>
                         <div class="two" data-nmb="2">2</div>
                         <div data-nmb="3">3</div>
-                        <div data-nmb="+">+
+                        <div data-nmb="+" data-symbole="+">+
                             <div class="ct y">Pol</div>
                         </div>
-                        <div data-nmb="-">-
+                        <div data-nmb="-" data-symbole="-">-
                             <div class="ct y">Rec</div>
                         </div>
                         <div data-nmb="0">0
